welcome.lessons.welcome.bdr.BDR2.scala.code
lettre : string = litMessage()
while (estSurMessage){
  lettre match {
    case "R" => droite();avance()
    case "L" =>
    case "I" =>
    case "A" =>
    case "B" =>
    case "C" =>
    case "D" =>
    case "E" =>
    case "F" =>
    case "Z" =>
    case "Y" =>
    case "X" =>
    case "W" =>
    case "V" =>
    case "U" =>
  }
}
